--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,11 @@ RoxygenNote: 7.1.2
 Depends: 
     R (>= 2.10)
 LazyData: true
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    purrr,
+    rlang,
+    stringr,
+    tidyr
