--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,10 @@ Depends:
     R (>= 2.10)
 LazyData: true
 Suggests: 
+    hexSticker,
+    knitr,
+    magick,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
@@ -20,3 +24,4 @@ Imports:
     rlang,
     stringr,
     tidyr
+VignetteBuilder: knitr
