--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: This package contains all of Lenin's works available on the
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Depends: 
     R (>= 2.10)
 LazyData: true
@@ -20,11 +20,12 @@ Suggests:
     knitr,
     magick,
     rmarkdown,
+    stringr,
+    tidyr,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    purrr,
-    rlang,
-    stringr,
-    tidyr
+    ggtextcounts (>= 0.0.0.1)
 VignetteBuilder: knitr
+Remotes: 
+    alicirce/ggtextcounts
